same error code for install page

--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
     "installed": false, 
     "ssl": false, 
     "user": "", 
-    "password": "", 
+    "password": "dttmw5d", 
     "keyfile": "path/to/the/key/file", 
     "port": 4000
 }
