support for chromium browser

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "remove_scripts": true,
+    "browser": "chromium",
     "certfile": "path/to/the/crt/file", 
     "database": "jsseo", 
     "hostname": "localhost", 
@@ -7,7 +7,8 @@
     "keyfile": "path/to/the/key/file", 
     "logfile": "jsSeo.log",
     "password": "dttmw5d", 
-    "port": 4000
+    "port": 4000,
+    "remove_scripts": true,
     "ssl": false, 
-    "username": "root", 
+    "username": "root"
 }
