fix upstart configs

--- a/jsSeo-caching.conf
+++ b/jsSeo-caching.conf
@@ -10,4 +10,6 @@ chdir /var/www/jsSeo
 
 respawn
 
-exec /var/www/jsSeo/jsSeo-caching.py
+script
+    exec /var/www/jsSeo/jsSeo-caching.py
+end script
