--- a/jsSeo-botfacing.conf
+++ b/jsSeo-botfacing.conf
@@ -10,4 +10,6 @@ chdir /var/www/jsSeo
 
 respawn
 
-exec /var/www/jsSeo/jsSeo-botfacing.py
+script
+    exec /var/www/jsSeo/jsSeo-botfacing.py
+end script
