list of sites to cache in config

--- a/sample_config.json
+++ b/sample_config.json
@@ -12,5 +12,8 @@
     "remove_scripts": true,
     "ssl": false,
     "timeout": 30,
+    "urls": [
+        "http://localhost"
+        ],
     "username": "root"
 }
