fix upstart config

--- a/jsSeo.conf
+++ b/jsSeo.conf
@@ -5,11 +5,11 @@ stop on runlevel [!2]
 
 chdir /var/www/jsSeo
 
-#setuid web
-#setgid web
+setuid web
+setgid web
 
 respawn limit 3 5
 
 script
-    exec /var/www/jsSeo/jsSeo-botfacing.py
+    exec /var/www/jsSeo/jsSeo.py
 end script
