--- a/jsseo.conf
+++ b/jsseo.conf
@@ -1,9 +1,9 @@
-description "jsSeo bot facing server"
+description "jsseo bot facing server"
 
 start on runlevel 2
 stop on runlevel [!2]
 
-chdir /var/www/jsSeo
+chdir /var/www/jsseo
 
 setuid web
 setgid web
@@ -11,5 +11,5 @@ setgid web
 respawn limit 3 5
 
 script
-    exec /var/www/jsSeo/jsSeo.py
+    exec /var/www/jsseo/jsseo.py
 end script
