log with upstart

--- a/jsseo.conf
+++ b/jsseo.conf
@@ -11,5 +11,5 @@ setgid web
 respawn limit 3 5
 
 script
-    exec /var/www/jsseo/jsseo.py
+    exec /var/www/jsseo/jsseo.py 2>> /var/www/logs/jsseo.log
 end script
